SERVER-7660 findAndModify with auth + sort fix